@@ -1688,6 +1688,7 @@ extern bitstr_t *select_p_step_pick_nodes(struct job_record *job_ptr,
 			fatal("bit_copy malloc failure");
 		bit_or(bg_record->mp_used_bitmap, picked_mps);
 		step_jobinfo->ionode_str = xstrdup(jobinfo->ionode_str);
+		step_jobinfo->dim_cnt = jobinfo->dim_cnt;
 		goto found_it;
 	} else if ((ba_mp = ba_pick_sub_block_cnodes(
 			    bg_record, &node_count,
@@ -1712,6 +1713,7 @@ found_it:
 		}
 		step_jobinfo->cnode_cnt = node_count;
 	}
+
 end_it:
 
 	FREE_NULL_BITMAP(avail_mps);
